--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,14 @@ body {
     background-color: black;
     font-family: "Poppins", sans-serif;
     color: white;
+    overflow-x: hidden;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 30px;
+    padding: 10px 0;
     margin-bottom: 10px;
     color: white;
     border-radius: 8px;
@@ -51,6 +52,7 @@ nav ul li:hover {
     width: 100%;
     margin: 0 auto;
     padding: 0 40px;
+    position: relative;
 }
 
 .title {
